[package]
name = "bzd-gw"
edition = "2024"

[dependencies]
bzd-lib = { git = "https://github.com/bez-dna/bzd-lib.git" }
bzd-users-api = { git = "https://github.com/bez-dna/bzd-users.git" }

axum = { version = "0.8.4", features = ["macros"] }
axum-extra = "0.10.1"

prost = "0.14.1"
tonic = { version = "0.14.1", default-features = false, features = ["channel"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

tokio = { version = "1.47.1", features = ["full"] }

thiserror = "2.0.16"
tracing = "0.1.41"
config = { version = "0.15.15", features = ["toml"] }
