[package]
name = "bzd-gw"
edition = "2024"

[dependencies]
bzd-lib = { git = "https://github.com/bez-dna/bzd-lib.git" }
bzd-users-api = { git = "https://github.com/bez-dna/bzd-users.git" }
bzd-messages-api = { git = "https://github.com/bez-dna/bzd-messages.git" }

axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }

prost = "0.14.1"
tonic = { version = "0.14.2", default-features = false, features = ["channel"] }

serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.47.1", features = ["full"] }

thiserror = "2.0.16"
tracing = "0.1.41"
config = { version = "0.15.17", features = ["toml"] }
jsonwebtoken = "9.3.1"
